--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,20 @@
-
 *{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
 }
-
-body{
-  background-image: url("/image/bg-login.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%; 
-   height: 100vh;
-
-}
  .main{
-  /* margin-top: 20%; */
-  padding-top: 5%;
+  padding-bottom: 2%;
 }
 .U_formclass{
-  /* margin-top: 20%; */
   padding: 40px 20px 10px 30px;
-  /* display: block; */
 }
 .ant-row.css-dev-only-do-not-override-2rgkd4 {
   padding: 4px;
 } 
+a{
+  text-decoration: none;
+  color: darkmagenta;
+  font-weight: bold ;
+}
+
