--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,22 +1,39 @@
+.main {
+    display: flex;
+    justify-content: center;
+    margin-left: 27%;
+   overflow-y: hidden;
+   overflow-x: hidden;
 
-.main{
-  display: flex;
-  justify-content: center;
-  margin-left: 27%;
-  /* margin-top: 10%; */
-  
-  /* align-content: center; */
-  /* padding-left: 30PX; */
-  /* margin-top: 5rem; */
+    padding-bottom: 20px;
+    
+}
 
+.body {
+    /* height: 100vh; */
+    background-image: url("/image/bg-login.jpg");
+      background-size: cover;
+    background-repeat: no-repeat; 
+     width: 100%;
+    height: 100vh;  
 
 }
+.signup {
+    background-image: url("/image/bg-login.jpg");
+    background-size: cover; 
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+}
+
+
 @media only screen and (max-width: 450px) {
-     .main{
-    /* background-color: lightblue; */
-    
-     display: flex;
-     justify-content: center;
-     margin-left: 0;
-  }
+    .main {
+        margin-left: 0;
+    }
+}
+
+.parent{
+    width: 100vw;
+    height: 100vh;
 }
