--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,12 +6,9 @@
  .main{
   padding-bottom: 2%;
 }
-.U_formclass{
+.forms{
   padding: 40px 20px 10px 30px;
 }
-.ant-row.css-dev-only-do-not-override-2rgkd4 {
-  padding: 4px;
-} 
 a{
   text-decoration: none;
   color: darkmagenta;
